# cres

./: .travis.yml  CHANGELOG.md  Cargo.toml  Readme.md  appveyor.yml  build.rs
.github/workflows/: release.yml
ci/: before_deploy.sh  make_tarball.sh  script.sh
examples/: cres  cres.c  minimal.rs  user_distance.c  user_distance.rs
ntuplereader/: cnTupleReader.cc  cnTupleReader.h
src/: auto_decompress.rs  bisect.rs  cell.rs  cell_collector.rs  cluster.rs  compression.rs  converter.rs  cres.rs  distance.rs  event.rs  file.rs  formats.rs  four_vector.rs  hepmc.rs  hepmc2.rs  io.rs  lhef.rs  lib.rs  naive_neighbour_search.rs  neighbour_search.rs  ntuple.rs  parser.rs  parsing.rs  partition.rs  prelude.rs  progress_bar.rs  reader.rs  resampler.rs  seeds.rs  sorted_multimap.rs  storage.rs  stripper_xml.rs  traits.rs  unweight.rs  util.rs  vptree.rs  vptree_neighbour_search.rs  writer.rs
src/c_api/: cres.rs  distance.rs  error.rs  event.rs  log.rs  mod.rs
src/distance/: eucl.rs  mod.rs  rel.rs
src/hepmc2/: converter.rs  mod.rs  reader.rs  writer.rs
src/lhef/: mod.rs  reader.rs  writer.rs
src/ntuple/: converter.rs  mod.rs  ntuplereader.rs  reader.rs  writer.rs
src/stripper_xml/: mod.rs  reader.rs  writer.rs
test_data/: showered.hepmc.zst
