[package]
name = "cres"
version = "0.6.1"
description = "Cell resampling for collider events"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/cres"
autobins = false

[dependencies]
anyhow = "1.0"
argfile = "0.1"
audec = { version = "0.1", features = ["bzip2", "lz4"] }
bzip2 = "0.4"
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.0"
console = "0.15"
derivative = "2.2.0"
derive_builder = "0.12"
dirs = "5.0"
env_logger = "0.10"
flate2 = "1.0"
indicatif = "0.17"
itertools = "0.11"
jetty = "0.4"
lazy_static = "1.4"
log = "0.4"
logbar = "0.1"
lz4 = "1.23"
memchr = { version = "2.5", optional = true }
noisy_float = "0.2"
nom = "7.1"
ntuple = { version = "0.8", optional = true }
num-traits = "0.2"
parking_lot = "0.12"
particle_id = "0.4"
pathfinding = "4.2"
permutohedron = "0.2"
quick-xml = { version = "0.30", features = ["serde"], optional = true }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0", optional = true }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
thread_local = "1.1"
typed-builder = "0.16"
zstd = "0.12"

[lib]
name = "cres"
path = "src/lib.rs"
crate-type =["lib", "staticlib", "cdylib"]

[[bin]]
name = "cres"
path = "src/bin/main.rs"

[[bin]]
name = "cres-generate-shell-completions"
path = "src/bin/shell_completion.rs"

[features]
default = ["multiweight", "hardware-lock-elision", "lhef"]
ntuple = ["dep:ntuple", "dep:cc", "dep:bindgen"]
# capi = ["multiweight"]
lhef = []
multiweight = []
hardware-lock-elision = ["parking_lot/hardware-lock-elision"]

[build-dependencies]
anyhow = "1.0"
bindgen = { version = "0.68", optional = true }
cbindgen = "0.26"
cc = { version = "1.0", optional = true }
vergen = { version = "8", features = ["git", "gitcl"] }

[dev-dependencies]
tempfile = "3.8"
