[package]
name = "cres"
version = "0.7.1"
description = "Cell resampling for collider events"
authors = ["Andreas Maier <amaier@ifae.es>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/cres"
autobins = false

[dependencies]
anyhow = "1.0"
argfile = "0.2"
audec = { version = "0.1", features = ["bzip2", "lz4"] }
bzip2 = "0.5"
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.0"
console = "0.15"
derivative = "2.2.0"
dirs = "6.0"
env_logger = "0.11"
flate2 = "1.0"
indicatif = "0.17"
itertools = "0.14"
jetty = "0.4"
log = "0.4"
logbar = "0.1"
lz4 = "1.23"
noisy_float = { version = "0.2", features = ["serde"] }
nom = "7.1"
ntuple = { version = "0.9", optional = true }
parking_lot = { version = "0.12", features = ["serde"] }
particle_id = { version = "0.5", features = ["serde"] }
pathfinding = "4.2"
permutohedron = "0.2"
quick-xml = { version = "0.31", features = ["serde"], optional = true }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
stripper-xml = { version = "0.5", optional = true }
strum = { version = "0.26", features = ["derive"] }
sysinfo = "0.32"
thiserror = "2.0"
thread_local = "1.1"
zstd = "0.13"

[lib]
name = "cres"
path = "src/lib.rs"
crate-type =["lib", "staticlib", "cdylib"]

[[bin]]
name = "cres"
path = "src/bin/main.rs"

[[bin]]
name = "cres-partition"
path = "src/bin/partition.rs"

[[bin]]
name = "cres-classify-events"
path = "src/bin/classify-events.rs"

[[bin]]
name = "cres-generate-shell-completions"
path = "src/bin/shell_completion.rs"

[features]
default = ["lhef", "multiweight", "hardware-lock-elision"]
multiweight = []
hardware-lock-elision = ["parking_lot/hardware-lock-elision"]
lhef = []
ntuple = ["dep:ntuple", "dep:cc", "dep:bindgen"]
stripper-xml = ["dep:stripper-xml", "quick-xml"]
capi = ["multiweight"]

[build-dependencies]
anyhow = "1.0"
bindgen = { version = "0.71", optional = true }
cbindgen = "0.28"
cc = { version = "1.0", optional = true }
vergen = { version = "8", features = ["git", "gitcl"] }

[dev-dependencies]
tempfile = "3.8"
