[package]
name = "cres"
version = "0.9.1"
description = "Cell resampling for collider events"
authors = ["Andreas Maier <amaier@ifae.es>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/cres"
autobins = false
rust-version = "1.82.0"

[dependencies]
anyhow = "1.0"
argfile = "0.2"
audec = { version = "0.1", features = ["bzip2", "lz4"] }
bzip2 = "0.6"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.16"
derivative = "2.2.0"
dirs = "6.0"
env_logger = "0.11"
flate2 = "1.1"
indicatif = "0.18"
itertools = "0.14"
jetty = "0.4"
log = "0.4"
logbar = "0.1"
lz4 = "1.28"
noisy_float = { version = "0.2", features = ["serde"] }
nom = "8"
ntuple = { version = "0.10", optional = true }
parking_lot = { version = "0.12", features = ["serde"] }
particle_id = { version = "0.5", features = ["serde"] }
pathfinding = "4.14"
permutohedron = "0.2"
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
rand = "0.9"
rand_xoshiro = "0.7"
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
stripper-xml = { version = "0.5", optional = true }
strum = { version = "0.27", features = ["derive"] }
sysinfo = "0.36"
thiserror = "2.0"
thread_local = "1.1"
zstd = "0.13"

[lib]
name = "cres"
path = "src/lib.rs"
crate-type =["lib", "staticlib", "cdylib"]

[[bin]]
name = "cres"
path = "src/bin/main.rs"

[[bin]]
name = "cres-partition"
path = "src/bin/partition.rs"

[[bin]]
name = "cres-classify-events"
path = "src/bin/classify-events.rs"

[[bin]]
name = "cres-generate-shell-completions"
path = "src/bin/shell_completion.rs"

[features]
default = ["lhef", "multiweight", "hardware-lock-elision"]
multiweight = []
hardware-lock-elision = ["parking_lot/hardware-lock-elision"]
lhef = []
ntuple = ["dep:ntuple", "dep:cc", "dep:bindgen"]
stripper-xml = ["dep:stripper-xml", "quick-xml"]
capi = ["multiweight"]

[build-dependencies]
anyhow = "1.0"
bindgen = { version = "0.72", optional = true }
cbindgen = "0.29"
cc = { version = "1.2", optional = true }
vergen-git2 = "1.0"

[dev-dependencies]
tempfile = "3.20"
